--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,4 @@
 <!DOCTYPE html>
-<!--
-                                                                          
-                                 .--,-``-.                              
-                                /   /     '.                            
-                               / ../        ;                           
-      ,---,                    \ ``\  .`-    '                   ,---,  
-  ,-+-. /  |               .---.\___\/   \   :               ,-+-. /  | 
- ,--.'|'   |  ,--.--.    /.  ./|     \   :   |      ,---.   ,--.'|'   | 
-|   |  ,"' | /       \ .-' . ' |     /  /   /      /     \ |   |  ,"' | 
-|   | /  | |.--.  .-. /___/ \: |     \  \   \     /    / ' |   | /  | | 
-|   | |  | | \__\/: . .   \  ' . ___ /   :   |   .    ' /  |   | |  | | 
-|   | |  |/  ," .--.; |\   \   '/   /\   /   :   '   ; :__ |   | |  |/  
-|   | |--'  /  /  ,.  | \   \  / ,,/  ',-    .___'   | '.'||   | |--'   
-|   |/     ;  :   .'   \ \   \ \ ''\        ;/  .\   :    :|   |/       
-'---'      |  ,     .-./  '---" \   \     .' \  ; \   \  / '---'        
-            `--`---'             `--`-,,-'    `--" `----'               
-                      
-                     2018/4/26   www.nav3.cn
-
-        ,+++++++++++++++++++++++++++++++++++++++++++++++++.
-        ( We want you! https://github.com/xjh22222228/nav )
-        `-,+++++++++++++++++++++++++++++++++++++++++++++++'
--->
 <html>
 <head>
   <meta charset="utf-8">
@@ -33,6 +10,17 @@
   <link rel="icon" href="assets/logo.png">
   <!-- nav.config -->
   <link rel="stylesheet" href="//at.alicdn.com/t/font_2267418_9g7l2chchxs.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2935642389749184"
+     crossorigin="anonymous"></script>
+  <ins class="adsbygoogle"
+       style="display:block; text-align:center;"
+       data-ad-layout="in-article"
+       data-ad-format="fluid"
+       data-ad-client="ca-pub-2935642389749184"
+       data-ad-slot="9948956563"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
   <title>发现导航 - 精选实用导航网站</title>
 </head>
 <body>
