--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,63 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <base href="/">
-  <meta name="author" content="https://github.com/xjh22222228">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="renderer" content="webkit">
-  <link rel="icon" href="assets/logo.png">
-  <!-- nav.config -->
-  <link rel="stylesheet" href="//at.alicdn.com/t/font_2267418_9g7l2chchxs.css">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2935642389749184"
-     crossorigin="anonymous"></script>
-  <ins class="adsbygoogle"
-       style="display:block; text-align:center;"
-       data-ad-layout="in-article"
-       data-ad-format="fluid"
-       data-ad-client="ca-pub-2935642389749184"
-       data-ad-slot="9948956563"></ins>
-  <script>
-       (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-  <title>发现导航 - 精选实用导航网站</title>
-</head>
-<body>
-  
-<app-xiejiahe>
-  <!-- nav.loading -->
-</app-xiejiahe>
+  <head>
+    <meta charset="utf-8" />
+    <base href="/" />
+    <meta name="author" content="https://github.com/xjh22222228" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta name="renderer" content="webkit" />
+    <link rel="icon" href="assets/logo.png" />
+    <!-- nav.config -->
+    <link
+      rel="stylesheet"
+      href="//at.alicdn.com/t/font_2267418_9g7l2chchxs.css"
+    />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-CW87J7Z4J6"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-<script src="./assets/js/jquery.min.js"></script>
-<script src="./assets/js/ripple.min.js"></script>
+      gtag("config", "G-CW87J7Z4J6");
+    </script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2935642389749184"
+      crossorigin="anonymous"
+    ></script>
+    <ins
+      class="adsbygoogle"
+      style="display: block; text-align: center"
+      data-ad-layout="in-article"
+      data-ad-format="fluid"
+      data-ad-client="ca-pub-2935642389749184"
+      data-ad-slot="9948956563"
+    ></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <title>发现导航 - 精选实用导航网站</title>
+  </head>
+  <body>
+    <app-xiejiahe>
+      <!-- nav.loading -->
+    </app-xiejiahe>
 
-<!-- nav.script -->
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/ripple.min.js"></script>
 
-<!-- nav.seo -->
-</body>
+    <!-- nav.script -->
+
+    <!-- nav.seo -->
+  </body>
 </html>
