--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 
       gtag("config", "G-CW87J7Z4J6");
     </script>
-    <title>发现导航 - 精选实用导航网站</title>
+    <title>常用网站导航</title>
   </head>
   <body>
     <app-xiejiahe>
